--- a/style.css
+++ b/style.css
@@ -286,6 +286,117 @@ p{
 .header .row{
     margin-top: 30px;
 }
+
+
+/*------------------ BIODATA ------------------*/
+.biodata-header {
+    text-align: center;
+}
+
+.biodata-header h1 {
+    margin-bottom: 10px;
+}
+
+.biodata-header h3 {
+    text-transform: uppercase;
+    font-size: 15px;
+    font-weight: 500;
+}
+
+.biodata-img-area {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    overflow: hidden;
+    margin: 20px auto;
+    border: 13px groove #0fa41b;
+}
+
+.biodata-img-area img {
+    width: 100%;
+}
+
+.biodata-main {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.biodata-left {
+    flex: 1;
+    padding: 30px;
+}
+
+.biodata-left p {
+    line-height: 2;
+}
+
+.biodata-left ul {
+    list-style: none;
+    padding-left: 0;
+}
+
+.biodata-left ul li {
+    line-height: 2;
+}
+
+.section-title {
+    background: #0fa41b;
+    padding: 15px;
+    color: #fff;
+    margin: 30px 0;
+    font-size: 20px;
+    border-radius: 0 20px 20px 0;
+}
+
+.biodata-right {
+    flex: 1;
+    padding: 30px;
+}
+
+.biodata-right h3 {
+    margin-bottom: 15px;
+}
+
+.biodata-right p {
+    line-height: 2.9;
+}
+
+.biodata-right ul li {
+    line-height: 2;
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+    .biodata-container {
+        width: 95%;
+        height: auto;
+    }
+
+    .section-title {
+        font-size: 18px;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .biodata-main {
+        flex-direction: column;
+    }
+
+    .biodata-left,
+    .biodata-right {
+        flex: none;
+        width: 100%;
+    }
+
+    .biodata-container {
+        width: 95%;
+        height: auto;
+    }
+
+    .section-title {
+        font-size: 15px;
+    }
+}
+/*------------------ END OF BIODATA ------------------*/
 /* Navbar Search Bar */
 .search-bar {
     display: inline-flex;
@@ -725,6 +836,7 @@ input:focus{
     flex-basis: 24%;
     cursor: pointer;
 }
+/*--------------------- END OF SINGLE PRODUCT ---------------------*/
 
 /*------- cart items -------*/
 .cart-page{
@@ -881,6 +993,7 @@ form a{
     transform: translateX(100px);
     transition: transform 1s;
 }
+/*------------------ END OF ACCOUNT PAGE ------------------*/
 /*---------------- slider----------------*/
 .slider {
     width: 100%;
